--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,15 +3,22 @@ upstream web_server {
 }
 
 server {
-
     listen 80;
+    client_max_body_size 4G;
+
 
     location / {
-        proxy_pass http://web_server;
+        resolver 127.0.0.1 ipv6=off;
+        set $target http://web_server;
+        proxy_pass $target;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Host $host;
         proxy_redirect off;
-        client_max_body_size 100M;
+        proxy_buffering off;
     }
 
     location /static/ {
@@ -21,4 +28,8 @@ server {
         alias /vol/web/media/;
     }
 
+}
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
 }
