--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,27 +7,33 @@ license = "MIT License"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-Django = "^4.2.7"
+python = "^3.12"
+Django = "^5.0"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
-django-unfold = "^0.6.5"
-django-filter = "^23.2"
+django-unfold = "^0.18.0"
+django-filter = "^23.5"
 django-markdown = "^0.8.4"
-python-dotenv = "^1.0.0"
-django-cors-headers = "^4.1.0"
+django-cors-headers = "^4.3.1"
 django-mail-templated = "^2.6.5"
 daphne = "^4.0.0"
 channels = "^4.0.0"
-psycopg2 = "^2.9.6"
-celery = "^5.3.4"
-redis = "^5.0.0"
-django-redis = "^5.3.0"
-whitenoise = "^6.5.0"
-django-celery-beat = "^2.5.0"
-gunicorn = "^21.2.0"
-django-import-export = "^3.3.1"
+psycopg2 = "^2.9.9"
+celery = "^5.3.6"
+redis = "^5.0.1"
+django-redis = "^5.4.0"
+whitenoise = "^6.6.0"
+django-import-export = "^3.3.4"
 django-environ = "^0.11.2"
+pillow = "^10.1.0"
+django-types = "^0.18.0"
+djangorestframework-types = "^0.8.0"
+django-stubs-ext = "^4.2.2"
+drf-nested-routers = "^0.93.4"
+drf-spectacular = {extras = ["sidecar"], version = "^0.26.5"}
+drf-yasg = "^1.21.7"
+uvicorn = {extras = ["standard"], version = "^0.25.0"}
+channels-redis = "^4.1.0"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.2"
